--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Delishes"
         tools:targetApi="31">
         <activity
+            android:name=".loveReceptActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".AllReceptActivity"
             android:exported="false" />
         <activity
