--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Delishes"
         tools:targetApi="31">
         <activity
+            android:name=".ReceptDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".loveReceptActivity"
             android:exported="false" />
         <activity
@@ -41,7 +44,6 @@
         <activity
             android:name=".StartActivity"
             android:exported="false" />
-
 
         <meta-data
             android:name="preloaded_fonts"
